--- a/05-Blurry-loading/index.html
+++ b/05-Blurry-loading/index.html
@@ -14,11 +14,11 @@
     />
     <link rel="stylesheet" href="style.css" />
 
-    <title>My Project</title>
+    <title>Blurry-loading</title>
   </head>
   <body>
-    <h1>Project Stater</h1>
-
-    <script src="script.js" type="text"></script>
+    <section class="bg"></section>
+    <div class="loading-text">0%</div>
+    <script src="script.js"></script>
   </body>
 </html>
